Fix minor issues on dark mode, Add light mode

--- a/css-light/syntax.css
+++ b/css-light/syntax.css
@@ -1,8 +1,8 @@
 .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
 .highlight, .highlight .w {
-  color: #cdd6f4;
-  background-color: #181825;
+  color: #4c4f69;
+  background-color: #e6e9ef;
 }
 .highlight .err {
   color: #151515;
@@ -12,16 +12,16 @@
   color: #8087a2;
 }
 .highlight .cp {
-  color: #a6e3a1;
+  color: #40a02b;
 }
 .highlight .nt {
-  color: #e78284;
+  color: #d20f39;
 }
 .highlight .o, .highlight .ow {
-  color: #e78284;
+  color: #d20f39;
 }
 .highlight .p, .highlight .pi {
-  color: #fab387;
+  color: #fe640b;
 }
 .highlight .gi {
   color: #90a959;
@@ -35,16 +35,16 @@
   font-weight: bold;
 }
 .highlight .k, .highlight .kn, .highlight .kp, .highlight .kv, .highlight .kn, .highlight .kd {
-  color: #e78284;
+  color: #d20f39;
 }
 .highlight .kc {
-  color: #cba6f7;
+  color: #8839ef;
 }
 .highlight .kt {
-  color: #74c7ec;
+  color: #209fb5;
 }
 .highlight .s, .highlight .sb, .highlight .sc, .highlight .dl, .highlight .sd, .highlight .s2, .highlight .sh, .highlight .sx, .highlight .s1 {
-  color: #f9e2af;
+  color: #df8e1d;
 }
 .highlight .sa {
   color: #aa759f;
@@ -59,37 +59,37 @@
   color: #8f5536;
 }
 .highlight .nn {
-  color: #89b4fa;
+  color: #1e66f5;
 }
 .highlight .nc {
-  color: #89b4fa;
+  color: #1e66f5;
 }
 .highlight .no, .highlight .nd {
-  color: #74c7ec;
+  color: #209fb5;
 }
 .highlight .na {
-  color: #cdd6f4;
+  color: #4c4f69;
 }
 .highlight .m, .highlight .mb, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .il, .highlight .mo, .highlight .mx {
-  color: #cba6f7;
+  color: #8839ef;
 }
 .highlight .ss {
   color: #90a959;
 }
 .highlight .nf {
-  color: #a6e3a1;
+  color: #40a02b;
 }
 
 .n + .o + .na, .na + .o + .na {
-    color:#a6e3a1;
+    color:#40a02b;
 }
 .highlight .kr {
-  color: #74c7ec;
+  color: #209fb5;
 }
 
 .language-plaintext.highlighter-rouge {
-  background-color: #181825;
-  color: #ca9ee6;
+  background-color: #e6e9ef;
+  color: #8839ef;
   font-size: large;
   padding-left: 5px;
   padding-right: 5px;
